ch06-kubernetes/services/flask-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  labels:
    run: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-app
