ch06-kubernetes/services/nginx-app-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app
spec:
  ingressClassName: nginx
  rules:
  - host: v1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-version-one
            port:
              number: 80
  - host: v2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-version-two
            port:
              number: 80
